manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82242301-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
    - host: "app1-82242301.ce-aa.kubepia.net"
      http:
        paths:
          - path: /
            backend:
              service:
                name: my-82242301
                port:
                  number: 8080
            pathType: Prefix
